media/css/firefoxcup/firefoxcup.css
/* ... */
#teams tfoot { display: none; }
#teams tfoot td {
	-webkit-border-bottom-right-radius: 10px;
	-webkit-border-bottom-left-radius: 10px;
	-moz-border-radius-bottomright: 10px;
	-moz-border-radius-bottomleft: 10px;
	border-bottom-right-radius: 10px;
	border-bottom-left-radius: 10px;
	background: #fff;
	padding: 5px;
}

#teams img {
	display: block;
	margin: 0 auto;
}

/* }}} */
/* {{{ Tweets */

#tweets {
	width: 275px;
	float: left;
	display: inline;
	border-collapse: separate;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
	-moz-box-shadow: 1px 1px 2px rgba(0,0,0,0.1), 0 -20px 45px rgba(0,0,0,0.08) inset;
	-webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.1), 0 -20px 45px rgba(0,0,0,0.08) inset;
	margin: 25px 0;
}

#tweets th,
#tweets td {
	padding: 8px 12px;
}

#tweets thead th {
	background-color: #58cf50;
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgb(95,219,87)), color-stop(1, rgb(82,196,74)));
	background-image: -moz-linear-gradient(center top, rgb(95,219,87) 0%, rgb(82,196,74) 100%);
	color: #fff;
	font-size: 16px;
	padding: 4px 12px;
	-webkit-border-top-left-radius: 10px;
	-moz-border-radius-topleft: 10px;
	border-top-left-radius: 10px;
	-webkit-border-top-right-radius: 10px;
	-moz-border-radius-topright: 10px;
	border-top-right-radius: 10px;
}

#tweets thead th a {
	display: block;
	background: url(../../img/firefoxcup/twitter.png) 0 50% no-repeat;
	padding: 12px 0;
	padding-left: 50px;
}

[dir="rtl"] #tweets thead th a {
	background-position: 100% 50%;
	padding-left: 0;
	padding-right: 50px;
}

#tweets thead th a:link,
#tweets thead th a:visited,
#tweets thead th a:hover,
#tweets thead th a:active {
	color: #fff;
}

#tweets thead th a:hover,
#tweets thead th a:active {
	text-decoration: underline;
}

#tweets thead th img {
	vertical-align: middle;
	margin-right: 8px;
}

#tweets thead td {
	background: #d5ead5;
	padding: 1px;
}

#tweets tbody td {
	background: #fff;
	border-width: 1px;
	border-style: solid;
	border-color: #f2fcf1 #eee #e3f8df #eee;
}

#tweets tbody tr:nth-child(even) td {
	background: #e3f8df;
}

#tweets tbody td:first-child {
	border-left: 1px solid #eee;
}

#tweets tbody td:last-child {
	border-right: 1px solid #eee;
}

#tweets tbody tr:last-child td {
	border-bottom: 1px solid #eee;
}

#tweets tbody tr:last-child td:first-child {
	-webkit-border-bottom-left-radius: 10px;
	-moz-border-radius-bottomleft: 10px;
	border-bottom-left-radius: 10px;
}

#tweets tbody tr:last-child td:last-child {
	-webkit-border-bottom-right-radius: 10px;
	-moz-border-radius-bottomright: 10px;
	border-bottom-right-radius: 10px;
}

#tweets tfoot { display: none; }
#tweets tfoot td {
	-webkit-border-bottom-right-radius: 10px;
	-webkit-border-bottom-left-radius: 10px;
	-moz-border-radius-bottomright: 10px;
	-moz-border-radius-bottomleft: 10px;
	border-bottom-right-radius: 10px;
	border-bottom-left-radius: 10px;
	background: #fff;
	padding: 5px;
}

/* }}} */
/* {{{ Reset AMO Styles */

table {
    border-bottom: 0;
}

thead th {
	border: 0;
}

tbody {
    border: 0;
}

tbody tr th, tbody tr td {
    border-top: 0;
}

/* }}} */
/* {{{ Sparkline */

td.fans {
  text-align: center;
}
.inlinesparkline {
  display: none;
  margin: 0 15px;
}

/* }}} */

.flag { 
  background: url(../../img/firefoxcup/flags-sprite.png) no-repeat top left; 
  width: 33px; 
  height: 33px;
}
.flag-algeria { background-position: 0 0;  } 
.flag-argentina { background-position: 0 -63px; } 
.flag-australia { background-position: 0 -126px; } 
.flag-brazil { background-position: 0 -189px; } 
.flag-cameroon { background-position: 0 -252px; } 
.flag-chile { background-position: 0 -315px; } 
.flag-cote { background-position: 0 -378px; } 
.flag-denmark { background-position: 0 -441px; } 
.flag-england { background-position: 0 -504px; } 
.flag-france { background-position: 0 -567px; } 
.flag-germany { background-position: 0 -630px; } 
.flag-ghana { background-position: 0 -693px; } 
.flag-greece { background-position: 0 -756px; } 
.flag-honduras { background-position: 0 -819px; } 
.flag-italy { background-position: 0 -882px; } 
.flag-japan { background-position: 0 -945px; } 
.flag-korea-dpr { background-position: 0 -1008px; } 
.flag-korea-republic { background-position: 0 -1071px; } 
.flag-mexico { background-position: 0 -1134px; } 
.flag-netherlands { background-position: 0 -1197px; } 
.flag-new-zealand { background-position: 0 -1260px; } 
.flag-nigeria { background-position: 0 -1323px; } 
.flag-paraguay { background-position: 0 -1386px; } 
.flag-portugal { background-position: 0 -1449px; } 
.flag-serbia { background-position: 0 -1512px; } 
.flag-slovakia { background-position: 0 -1575px; } 
.flag-slovenia { background-position: 0 -1638px; } 
.flag-south-africa { background-position: 0 -1701px; } 
.flag-spain { background-position: 0 -1764px; } 
.flag-switzerland { background-position: 0 -1827px; } 
.flag-uruguay { background-position: 0 -1890px; } 
.flag-usa { background-position: 0 -1953px; } 

