bug 572242, [firefoxcup] Horizontal scrollbar shows up with long, unbroken, contiguous strings

--- a/media/css/firefoxcup/firefoxcup.css
+++ b/media/css/firefoxcup/firefoxcup.css
@@ -554,7 +554,6 @@ ul.personas-list {
 #tweets {
 	width: 275px;
 	float: left;
-	display: inline;
 	border-collapse: separate;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
@@ -562,11 +561,13 @@ ul.personas-list {
 	-moz-box-shadow: 1px 1px 2px rgba(0,0,0,0.1), 0 -20px 45px rgba(0,0,0,0.08) inset;
 	-webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.1), 0 -20px 45px rgba(0,0,0,0.08) inset;
 	margin: 25px 0;
+  table-layout: fixed;
 }
 
 #tweets th,
 #tweets td {
 	padding: 8px 12px;
+  word-wrap: break-word;
 }
 
 #tweets thead th {
